--- a/templates/default/mysql.properties.erb
+++ b/templates/default/mysql.properties.erb
@@ -1,5 +1,5 @@
 type=mysql
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://<%= @db_host %>:3306/<%= @db_name %>?characterEncoding=UTF-8&elideSetAutoCommits=true&user=<%= @db_user %>&password=v<%= @db_password %>
+url=jdbc:mysql://<%= @db_host %>:<%= @db_port %>/<%= @db_name %>?characterEncoding=UTF-8&elideSetAutoCommits=true&user=<%= @db_user %>&password=v<%= @db_password %>
 username=artifactory
 password=password
