--- a/templates/default/postgresql.properties.erb
+++ b/templates/default/postgresql.properties.erb
@@ -1,5 +1,5 @@
 type=postgresql
 driver=org.postgresql.Driver
-url=jdbc:postgresql://<%= @db_host %>:5432/<%= @db_name %>
+url=jdbc:postgresql://<%= @db_host %>:<%= @db_port %>/<%= @db_name %>
 username=<%= @db_user %>
 password=<%= @db_password %>
