Changed config XML approach. Just building thing from XML template and not dynamically in Ruby. Reason: a lot of folks have no have access to install nokogiri from rubygems.org

--- a/templates/default/artifactory.config.xml.erb
+++ b/templates/default/artifactory.config.xml.erb
@@ -13,7 +13,21 @@
         <passwordSettings>
             <encryptionPolicy>supported</encryptionPolicy>
         </passwordSettings>
-        <ldapSettings/>
+        <ldapSettings>
+          <ldapSetting>
+            <key><%= @key %></key>
+            <enabled><%= @enabled %></enabled>
+            <ldapUrl><%= @ldapUrl %></ldapUrl>
+            <search>
+              <searchFilter><%= @searchFilter %></searchFilter>
+              <searchBase><%= @searchBase %></searchBase>
+              <managerDn><%= @managerDn %></managerDn>
+              <managerPassword><%= @managerPassword %></managerPassword>
+            </search>
+            <autoCreateUser><%= @autoCreateUser %></autoCreateUser>
+            <emailAttribute><%= @emailAttribute %></emailAttribute>
+          </ldapSetting>
+        </ldapSettings>
         <ldapGroupSettings/>
     </security>
     <backups>
