Simplify config import. Just need to post the xml file to a URL. No need to unzip existing export.

--- a/templates/default/artifactory.config.xml.erb
+++ b/templates/default/artifactory.config.xml.erb
@@ -19,10 +19,10 @@
             <enabled><%= @enabled %></enabled>
             <ldapUrl><%= @ldapUrl %></ldapUrl>
             <search>
-              <searchFilter><%= @searchFilter %></searchFilter>
+              <searchFilter><![CDATA[<%= @searchFilter %>]]></searchFilter>
               <searchBase><%= @searchBase %></searchBase>
               <managerDn><%= @managerDn %></managerDn>
-              <managerPassword><%= @managerPassword %></managerPassword>
+              <managerPassword><![CDATA[<%= @managerPassword %>]]></managerPassword>
             </search>
             <autoCreateUser><%= @autoCreateUser %></autoCreateUser>
             <emailAttribute><%= @emailAttribute %></emailAttribute>
